MiniCompiladorWorkflow/tests/invalid/error5.wf
tarea a { ir_a b; } tarea b { ir_a a; }
